--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <div class="card-heading"><h2>This is a card!!</h2></div>
             <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, explicabo.</div>
         </div>
+        
+        <div class="backdrop"></div>
     </div>
     <script src="script.js" type="module"></script>
 </body>
